--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ ENDIF()
 SET( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules" )
 FIND_PACKAGE( Vulkan REQUIRED )
 FIND_PACKAGE( Assimp REQUIRED )
+FIND_PACKAGE( GLFW REQUIRED )
 
 #Subprojects
 ADD_SUBDIRECTORY( code/ )
