--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -15,9 +15,9 @@ if ( MSVC )
   ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )
 endif ( MSVC )
 
-INCLUDE_DIRECTORIES ( ${ASSIMP_INCLUDE_DIRS} ${VULKAN_INCLUDE_DIRS} )
+INCLUDE_DIRECTORIES ( ${ASSIMP_INCLUDE_DIRS} ${VULKAN_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
 ADD_LIBRARY ( firestone ${f3d_src} )
-TARGET_LINK_LIBRARIES ( firestone ${ASSIMP_LIBRARIES} ${VULKAN_LIBRARIES} )
+TARGET_LINK_LIBRARIES ( firestone ${ASSIMP_LIBRARIES} ${VULKAN_LIBRARIES} ${GLFW_LIBRARIES} )
 
 SET_TARGET_PROPERTIES( firestone PROPERTIES
 						VERSION ${F3D_VERSION}
