Build system, and impl begins: f3d deps includes are present, adds a sample viewer project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,9 @@ FIND_PACKAGE( Vulkan REQUIRED )
 FIND_PACKAGE( Assimp REQUIRED )
 FIND_PACKAGE( GLFW REQUIRED )
 
+INCLUDE_DIRECTORIES( includes/ )
+INCLUDE_DIRECTORIES( includes/f3d/ )
+
 #Subprojects
 ADD_SUBDIRECTORY( code/ )
 ADD_SUBDIRECTORY( examples/ )
