Hidding firestone dependencies to GLFW, VUlkan adn Assmi. Still have to keep assimp math types for now

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -2,29 +2,47 @@ cmake_minimum_required( VERSION 3.0 )
 
 SET( F3D_LIB_NAME f3d )
 SET( F3D_HEADER_PATH ../include/f3d/ )
+SET( F3D_PRIVATE_HEADER_PATH ../code/ )
 SET( F3D_HEADERS 
   ${F3D_HEADER_PATH}/f3d.h
+  ${F3D_HEADER_PATH}/core/firestone.h
   ${F3D_HEADER_PATH}/core/settings.h
   ${F3D_HEADER_PATH}/core/window.h
   ${F3D_HEADER_PATH}/tree/scene.h
   ${F3D_HEADER_PATH}/tree/mesh.h
   ${F3D_HEADER_PATH}/tree/light.h
   ${F3D_HEADER_PATH}/tree/camera.h
-  ${F3D_HEADER_PATH}/utils/vulkan.h
   ${F3D_HEADER_PATH}/utils/logging.h
+ )
+ 
+ SET( F3D_PRIVATE_HEADERS 
+  ${F3D_PRIVATE_HEADER_PATH}/core/firestone_impl.h
+  ${F3D_PRIVATE_HEADER_PATH}/core/window_impl.h
+  ${F3D_PRIVATE_HEADER_PATH}/tree/scene_impl.h
+  ${F3D_PRIVATE_HEADER_PATH}/tree/mesh_impl.h
+  ${F3D_PRIVATE_HEADER_PATH}/tree/light_impl.h
+  ${F3D_PRIVATE_HEADER_PATH}/tree/camera_impl.h
+  ${F3D_PRIVATE_HEADER_PATH}/utils/vulkan.h
  )
 
 SET( f3d_src
-	 firestone.cpp
+	 core/firestone.cpp
+	 core/firestone_impl.cpp
 	 core/settings.cpp
 	 core/window.cpp
+	 core/window_impl.cpp
 	 tree/scene.cpp
+	 tree/scene_impl.cpp
 	 tree/mesh.cpp
+	 tree/mesh_impl.cpp
 	 tree/light.cpp
+	 tree/light_impl.cpp
 	 tree/camera.cpp
+	 tree/camera_impl.cpp
 	 utils/vulkan.cpp
 	 
 	 ${F3D_HEADERS}
+	 ${F3D_PRIVATE_HEADERS}
 )
 
 if ( MSVC )
@@ -32,7 +50,9 @@ if ( MSVC )
   ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )
 endif ( MSVC )
 
-INCLUDE_DIRECTORIES ( ${F3D_HEADER_PATH} ${VULKAN_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
+add_definitions( -DF3D_EXPORT_STATIC )
+
+INCLUDE_DIRECTORIES ( ${F3D_HEADER_PATH} ${F3D_PRIVATE_HEADER_PATH} ${VULKAN_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
 ADD_LIBRARY ( firestone ${f3d_src} )
 TARGET_LINK_LIBRARIES ( firestone ${ASSIMP_LIBRARIES} ${VULKAN_LIBRARIES} ${GLFW_LIBRARIES} )
 
