--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required( VERSION 3.0 )
 
-SET( F3D_LIB_NAME f3d )
 SET( F3D_HEADER_PATH ../include/f3d/ )
 SET( F3D_PRIVATE_HEADER_PATH ./ )
 
@@ -128,14 +127,23 @@ SET( f3d_src
 )
 
 if ( MSVC )
-  ADD_DEFINITIONS( -D_SCL_SECURE_NO_WARNINGS )
-  ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )
-endif ( MSVC )
+	ADD_DEFINITIONS( -D_SCL_SECURE_NO_WARNINGS )
+	ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )
+endif ()
 
 ADD_DEFINITIONS( -D_USE_MATH_DEFINES )
-ADD_DEFINITIONS( -DF3D_EXPORT_STATIC )
 
-ADD_LIBRARY ( firestone ${f3d_src} )
+if ( F3D_EXPORT_STATIC )
+	SET (F3D_EXPORT_DEF -DF3D_EXPORT_STATIC)
+	SET (F3D_LINK STATIC)
+else ()
+	SET (F3D_EXPORT_DEF -DF3D_EXPORT_DYNAMIC)
+	SET (F3D_LINK SHARED)
+endif ()
+	
+ADD_DEFINITIONS( ${F3D_EXPORT_DEF} )
+
+ADD_LIBRARY ( firestone ${F3D_LINK} ${f3d_src} )
 TARGET_INCLUDE_DIRECTORIES ( firestone
 	PUBLIC ${F3D_HEADER_PATH} 
 	PUBLIC ${F3D_PRIVATE_HEADER_PATH}
