--- a/examples/viewer/CMakeLists.txt
+++ b/examples/viewer/CMakeLists.txt
@@ -9,7 +9,7 @@ INCLUDE_DIRECTORIES( ${F3D_INCLUDE_INSTALL_DIR}
 LINK_DIRECTORIES( ${F3D_LIB_INSTALL_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} )
 
 ADD_EXECUTABLE( sample_viewer ${sample_viewer_src} )
-TARGET_LINK_LIBRARIES ( sample_viewer f3d ${ASSIMP_LIBRARIES} ${VULKAN_LIBRARIES} ${GLFW_LIBRARIES} )
+TARGET_LINK_LIBRARIES ( sample_viewer ${F3D_LIB_NAME} )
 SET_TARGET_PROPERTIES( sample_viewer PROPERTIES
 						OUTPUT_NAME sample_viewer
 )
