Most of the flat shaders implementation

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -46,15 +46,33 @@ SET ( f3d_program_headers
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/program.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0000_0000.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0000_0001.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0000_0002.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0000_0003.h
-	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0001_0000.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0001_0000.h	
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0001_0001.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0001_0002.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0001_0003.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0001_0006.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0003_0006.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0005_0001.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0005_0003.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0005_0007.h
 )
 SET ( f3d_program_src
 	core/programs/program.cpp
 	core/programs/p-0001_0000_0000_0000.cpp
 	core/programs/p-0001_0000_0000_0001.cpp
+	core/programs/p-0001_0000_0000_0002.cpp
 	core/programs/p-0001_0000_0000_0003.cpp
 	core/programs/p-0001_0000_0001_0000.cpp
+	core/programs/p-0001_0000_0001_0001.cpp
+	core/programs/p-0001_0000_0001_0002.cpp
+	core/programs/p-0001_0000_0001_0003.cpp
+	core/programs/p-0001_0000_0001_0006.cpp
+	core/programs/p-0001_0000_0003_0006.cpp
+	core/programs/p-0001_0000_0005_0001.cpp
+	core/programs/p-0001_0000_0005_0003.cpp
+	core/programs/p-0001_0000_0005_0007.cpp
 )
 SOURCE_GROUP( impl\\programs FILES ${f3d_program_src} ${f3d_program_headers})
 
