Light array shader object must be aligned to a multiple of vec4 base alignement. Using std140 for lights. Lights are stored in a storage buffer instead of a uniform. combining lights i sOK

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -62,7 +62,9 @@ SET ( f3d_program_headers
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0005_0003.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0005_0007.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0001_0000_0000.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0001_0000_0003.h
 )
+
 SET ( f3d_program_src
 	core/programs/program.cpp
 #Flat Shading
@@ -79,7 +81,8 @@ SET ( f3d_program_src
 	core/programs/p-0001_0000_0005_0001.cpp
 	core/programs/p-0001_0000_0005_0003.cpp
 	core/programs/p-0001_0000_0005_0007.cpp
-	core/programs/p-0001_0001_0000_0000.cpp	
+	core/programs/p-0001_0001_0000_0000.cpp
+	core/programs/p-0001_0001_0000_0003.cpp
 )
 SOURCE_GROUP( impl\\programs FILES ${f3d_program_src} ${f3d_program_headers})
 
@@ -143,6 +146,7 @@ SET ( f3d_utils_src
 SET ( f3d_utils_headers
 	${F3D_PRIVATE_HEADER_PATH}/utils/vulkan.h
 	${F3D_PRIVATE_HEADER_PATH}/utils/f3d_to_vk.h
+	${F3D_PRIVATE_HEADER_PATH}/utils/assimp_to_f3d.h
 	) 
 SOURCE_GROUP( impl\\utils FILES ${f3d_utils_src} ${f3d_utils_headers} )
 
