Refactors shaders interface and programs with color computed in fragment shader from now on. Light and metrail are fragment shader attributes

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -63,6 +63,7 @@ SET ( f3d_program_headers
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0000_0005_0007.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0001_0000_0000.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0001_0000_0003.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/p-0001_0001_0005_0003.h
 )
 
 SET ( f3d_program_src
@@ -83,6 +84,7 @@ SET ( f3d_program_src
 	core/programs/p-0001_0000_0005_0007.cpp
 	core/programs/p-0001_0001_0000_0000.cpp
 	core/programs/p-0001_0001_0000_0003.cpp
+	core/programs/p-0001_0001_0005_0003.cpp
 )
 SOURCE_GROUP( impl\\programs FILES ${f3d_program_src} ${f3d_program_headers})
 
