New programs and minor fixes: extends shading enum, flat shaders and a first point light implementation. Material contains a shading type element

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -51,6 +51,12 @@ SET ( f3d_program_headers
 	#Flat shading
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0000_0000_0000.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0000_0000_0001.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0000_0000_0002.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0001_0000_0000.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0001_0000_0007.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0001_0003_0006.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0001_0001_0006.h
+	${F3D_PRIVATE_HEADER_PATH}/core/programs/flat/p-0001_0002_0000_0001.h
 	#Gouraud shading
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/gouraud/p-0002_0000_0000_0000.h
 	${F3D_PRIVATE_HEADER_PATH}/core/programs/gouraud/p-0002_0000_0000_0001.h
@@ -78,6 +84,12 @@ SET ( f3d_program_src
 	# Flat shading
 	core/programs/flat/p-0001_0000_0000_0000.cpp
 	core/programs/flat/p-0001_0000_0000_0001.cpp
+	core/programs/flat/p-0001_0000_0000_0002.cpp
+	core/programs/flat/p-0001_0001_0000_0000.cpp
+	core/programs/flat/p-0001_0001_0000_0007.cpp
+	core/programs/flat/p-0001_0001_0003_0006.cpp
+	core/programs/flat/p-0001_0001_0001_0006.cpp
+	core/programs/flat/p-0001_0002_0000_0001.cpp
 	# Gouraud shading
 	core/programs/gouraud/p-0002_0000_0000_0000.cpp
 	core/programs/gouraud/p-0002_0000_0000_0001.cpp
