Adds mouse helper, used by demo

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -183,8 +183,9 @@ SOURCE_GROUP( impl\\utils FILES ${f3d_utils_src} ${f3d_utils_headers} )
 
 SET ( f3d_helpers
 	${F3D_HEADER_PATH}/helpers/keyboard.hpp
-	${F3D_HEADER_PATH}/helpers/fly_camera.hpp
+	${F3D_HEADER_PATH}/helpers/mouse.hpp
 	${F3D_HEADER_PATH}/helpers/xbox_360.hpp
+	${F3D_HEADER_PATH}/helpers/fly_camera.hpp
 	) 
 SOURCE_GROUP( sdk\\helpers FILES ${f3d_helpers})
 
